# Simple-CLI

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE.md  README.md
.cache/clangd/index/: argumentParser.cpp.0C2E00170233C743.idx
example/: CMakeLists.txt  argumentParser.cpp
include/simpleCLI/: arguments.hpp  errors.hpp  erros.hpp  parser.hpp  simpleCLI.hpp
simpleCLI/: CMakeLists.txt  arguments.cpp  arguments.hpp  arguments.mpp  arguments.tpp  errors.cpp  errors.hpp  errors.mpp  erros.hpp  parser.cpp  parser.hpp  parser.mpp  parser.tpp  simpleCLI.hpp  simpleCli.hpp  simpleCli.mpp  stdIncludes.hpp
simpleCLI/header/: arguments.hpp  errors.hpp  externalLibraries.hpp  parser.hpp  simpleCLI.hpp
simpleCLI/source/: arguments.cpp  arguments.tpp  errors.cpp  parser.cpp  parser.tpp
